smoof 1.6.0.4
=============

* Fixed bug in getLoggedValues when logging of x-values was set to FALSE in addLoggingWrapper

smoof 1.6.0.3
=============

* Added MMF1 to MMF13 problems from CEC2019 test suite
* Added SYM-Part simple, SYM-Part rotated and Omni-Test problems from CEC2019 test suite
* Added MMF14, MMF14a, MMF15 and MMF15a problems from CEC2019 test suite
* Added parameter size to addLoggingWrapper for improved performance
* getLoggedValues now correctly names function parameters.
* BBOB test function now return an ID.
* Changed: moved from rPython and RJSONIO to reticulate.
* Added vectorization to the MPM2 generator

smoof 1.6.0
===========

* Added bi-objective BBOB problem generator: makeBiObjBBOBFunction
* Added Kursawe function
* Added ED1 and ED2 functions
* Added WFG1 to WFG9 problems from the WFG-Problem Generator Toolkit
* Changed: renamed argument dimension to dimensions (this should not cause any problems with existing code)
* Changed: replaced geom_tile with geom_raster

smoof 1.5.1
===========

* logging and couting wrapper now have class smoof_function
* Fixed: convertTo{Minimization,Maximization} now flips sign of optima
* Better handling of additional arguments in makeFunctionsByName
* Added Shekel function
* Added inverted Vincent function
* Added modified Rastrigin function
* Added Hartmann{3,4,6} functions

smoof 1.5
=========

* Added shortcuts {s,m}nof for generating single-/multi-objective objective functionswith numeric parameters only
* Added: missing single-objective tag for BBOB functions
* Added: log.scale argument for autoplot
* Added: CITATION file
* Fixed: precision issue caused by rPython respectively RJSONIO::toJSON, which by
  default strips numeric values to only 4 digits.
* Fixed: ggplot2 warnings
* Fixed: wrong lower bound in MOP3 test function
* Fixed: issue in definition of Cosine Mixture Function due to faulty online sources