@@ -3,7 +3,7 @@
 ## Bugfixes 
 
 * Fixed bug in getLoggedValues when logging of x-values was set to FALSE in addLoggingWrapper
-
+* Fixed bug with instance ID mapping in makeBiObjBBOBFunction
 
 # smoof 1.6.0.3
 
